<resources>
    <string name="app_name">Xappie</string>
    <string name="app_name_caps">XAPPIE</string>
    <string name="close_icon">&#xE5CD;</string>
    <string name="xappie_tour">Xappie Tour</string>
    <string name="welcome_to_xappie">WELCOME TO XAPPIE!</string>
    <string name="ready_to_get_started">Ready to get started?</string>
    <string name="swipe_through_to_start_your_tour">Swipe through to start your tour.</string>
    <string name="thats_it">THATS IT!</string>
    <string name="time_to_be_e">Time to be e</string>
    <string name="x">X</string>
    <string name="tra_h">tra h</string>
    <string name="appy">appy</string>
    <string name="through_xappie">&#032;through Xappie.</string>
    <string name="continue_text">CONTINUE</string>
    <string name="arrow_back_icon">&#xf104;</string>
    <string name="arrow_circle"> &#xf0a8; </string>
    <string name="menu_icon">&#xf0c9;</string>
    <string name="my_profile"> My Profile </string>
    <string name="font_icon"> &#xf1ab;</string>
    <string name="text_colon"> &#58;</string>
    <string name="ravi_kiran">Ravi Kiran Koya</string>
    <string name="hyderabad">Hyderabad,India</string>
    <string name="full_name">Full Name</string>
    <string name="display_name">Display Name</string>
    <string name="ravi_k">Ravi K</string>
    <string name="email">Email</string>
    <string name="ravi_email">ravikiran.koya@gmail.com</string>
    <string name="mobile">Mobile No</string>
    <string name="ravi_mobile_no">9876543210</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Signup</string>
    <string name="password">Password</string>
    <string name="trouble_getting_in">Trouble getting in ?</string>
    <string name="show">Show</string>
    <string name="check_icon">&#xE5CA;</string>
    <string name="by_logging_agree">By Logging in, you agree to our" "</string>
    <string name="by_signing_up">By Signing up, you agree to our" "</string>
    <string name="t_c"><![CDATA[Terms & Conditions]]></string>
    <string name="and"> " "&amp; </string>
    <string name="privacy_policy"> <![CDATA[& Privacy Policy]]></string>
    <string name="privacy">Privacy Policy</string>
    <string name="or_sign_social">Or, Sign in with your Social accounts</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="view_profile">View Profile</string>
    <string name="home">Home</string>
    <string name="discussions">Discussions</string>
    <string name="entertainment">Entertainment</string>
    <string name="top_stories">Top Stories</string>
    <string name="gallery">Gallery</string>
    <string name="videos">Videos</string>
    <string name="events">Events</string>
    <string name="classifieds">Classifieds</string>
    <string name="jobs">Jobs</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="location_icon">&#xf041;</string>
    <string name="notifications_icon">&#xf0a2;</string>
    <string name="language_icon">&#xf1ab;</string>
    <string name="customization_icon">&#xf013;</string>
    <string name="hello">Hello!</string>
    <string name="sign_in_to_xappie">Sign In To Xappie</string>
    <string name="joined">Joined on</string>
    <string name="press_again_to_exit">Press Again to Exit</string>
    <string name="mobile_option">Mobile (optional)</string>
    <string name="checkbox_text">I hereby certify that I am 18 years of age.</string>
    <string name="enter_one_time">Enter One Time Password (OTP) sent to your Email ID %s or change Email ID</string>
    <string name="otp">OTP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="we_will_send_a">We will send a One Time Password (OTP) on your registered email ID to reset your password</string>
    <string name="enter_email">Enter your Email ID</string>
    <string name="reset_password">Reset Password</string>
    <string name="about_event"> - About Event - </string>
    <string name="name_of_the_event">Name of the Event*</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="settings_icon">&#xE8B8;</string>
    <string name="text_with_bullet">\u2022</string>
    <string name="prabhas_meets">Prabhas meets Chiru on Khaidi No. 150 sets</string>
    <string name="_5m">5 min ago</string>
    <string name="khaidi_russia">Khaidi No 150 unit flies to Russia &#8230;</string>
    <string name="_1hr">1hr ago</string>
    <string name="khaidi_firstlook">Khaidi No 150 First Look Teaser &#8230;</string>
    <string name="_6hr">6 hr ago</string>
    <string name="_1day">1 day ago</string>
    <string name="_3day">3 days ago</string>
    <string name="_1week">1 week ago</string>
    <string name="chiru">Chiranjeevi</string>
    <string name="pawan_kalyan">Pawan Kalyan</string>
    <string name="more_caps">SEE ALL</string>
    <string name="gallery_caps">GALLERY</string>
    <string name="videos_caps">VIDEOS</string>
    <string name="ads">SPONSORS</string>
    <string name="email_id">Email ID</string>
    <string name="old_password">Old Password</string>
    <string name="xxxxxx">xxxxxxxx</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_new_password">Re Enter New Password</string>
    <string name="auto_mobiles">Auto Mobiles</string>
    <string name="next_news">Next News</string>
    <string name="more_topics">MORE TOPICS</string>
    <string name="actress">Actress</string>
    <string name="actors">Actors</string>
    <string name="posted_by">Posted By</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="post">POST</string>
    <string name="next_icon">&#xE409;</string>
    <string name="share_icon">&#xf045;</string>
    <string name="delete_icon">&#xE16C;</string>
    <string name="camera_icon">&#xE412;</string>
    <string name="gallery_icon">&#xE3F4;</string>
    <string name="all_events">ALL EVENTS</string>
    <string name="add_new_event">ADD NEW EVENT</string>
    <string name="my_events">MY EVENTS</string>
    <string name="tag_line">Tag line</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload">Upload</string>
    <string name="cost">Cost</string>
    <string name="dress_code">Dress code</string>
    <string name="type_of_event">Type of event</string>
    <string name="when_event_taking_place"> - When Event taking place - </string>
    <string name="where_is_the_event_taking_place"> - Where is the Event taking place - </string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="name_of_the_location">Name of the Location</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="event_name">Event Name</string>
    <string name="date_time_hint">24 Jun, 10:00 pm</string>
    <string name="dress_code_with_colon">Dress Code</string>
    <string name="restrictions">Restrictions</string>
    <string name="event_tag_line_text_comes_here">Event tag line text comes here</string>
    <string name="total_cost">Ticket Cost :</string>
    <string name="who_is_going">Who is Going ?</string>
    <string name="may_be">May be</string>
    <string name="i_am_going">I\'m Going</string>
    <string name="every_saturday_night">Every Saturday Night, come experience the Glamour &amp; Glitz of Bollywood as you mix, Mingle and Dance at New york. </string>
    <string name="a_weekly_desi">A Weekly Desi Party of Excusily , Luxury  &amp; Debauchery....Bollywood Style</string>
    <string name="languages"> Languages </string>
    <string name="language">Language</string>
    <string name="countries"> Countries </string>
    <string name="select_countries">Select Country</string>
    <string name="united_states">United States</string>
    <string name="select_city">Select City</string>
    <string name="select_city_metro_area">Select City / Metro Area</string>
    <string name="arrow_right">&#xf105;</string>
    <string name="cities">Cities</string>
    <string name="find_jobs">FIND JOBS</string>
    <string name="post_job">POST JOB</string>
    <string name="my_posts">MY POSTS</string>
    <string name="jobs_applied">APPLIED JOBS</string>
    <string name="jobs_search">SEARCH JOBS</string>
    <string name="upload_icon">&#xE2C3;</string>
    <string name="no_events_icon">&#xE880;</string>
    <string name="events_busy_icon">&#xE615;</string>
    <string name="classifieds_busy_icon">&#xf0b1;</string>
    <string name="currently_no_events">Currently there are no Events in your Location.. We are working with our Partners for more events.... If you wish to add tap on Add New Event</string>
    <string name="currently_no_classifieds">Currently there are no Classifieds in your area… We are working with our Partners for more business listings… If you wish to add your business tap on Add Classified </string>
    <string name="currently_no_jobs">Currently there are no Jobs in your area.. We are working with our Partners for more Jobs.. If you wish to Hire tap on Post Job </string>
    <string name="no_events_added">No Events Yet Added.. If you wish to Add tap on Add New Event </string>
    <string name="no_classifieds_added">No Classifieds Yet Added.. If you wish to Add tap on Add Classified </string>
    <string name="no_jobs_added">No Jobs Yet Added.. If you wish to Add tap on Post Job </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="positions">POSITIONS : </string>
    <string name="ibm">IBM</string>
    <string name="bay_area_jobs">Bay Area Jobs</string>
    <string name="this_is_where">This is where you can set your location</string>
    <string name="place_to_set">Place to set or View your Notifications</string>
    <string name="preferences">Preferences</string>
    <string name="set_your_language">Set your language preferences here</string>
    <string name="discover">Discover</string>
    <string name="xappie_is_the">Xappie is the only mobile app for Indians</string>
    <string name="which_provides">which provides all the required information at</string>
    <string name="one_place">one place about your city and language</string>
    <string name="selected">selected</string>
    <string name="its">It\'s</string>
    <string name="Local">Local</string>
    <string name="simple">Simple</string>
    <string name="customizable">Customizable</string>
    <string name="free"><![CDATA[& Free]]></string>
    <string name="lets_start">LET\'S START</string>
    <string name="next">next</string>
    <string name="menu_preferences_notify">Menu - Preferences - Notifications</string>
    <string name="alerts">Alerts</string>
    <string name="are_you_missing">Are you missing latest updates in your locality?</string>
    <string name="we_send_alerts">We send alerts on local deals, coupons,</string>
    <string name="events_hosted">events hosted in your city. You can always</string>
    <string name="customize_based">customize based on your interests.</string>
</resources>