<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tour_screen_four"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_alerts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:gravity="center"
            android:text="@string/alerts"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />


        <TextView
            android:id="@+id/tv_notification_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_65dp"
            android:gravity="center"
            android:text="@string/notifications_icon"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_menu_pre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:gravity="center"
            android:text="@string/menu_preferences_notify"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp" />

        <TextView
            android:id="@+id/tv_are_you_missing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_65dp"
            android:gravity="center"
            android:text="@string/are_you_missing"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp" />

        <TextView
            android:id="@+id/tv_we_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/we_send_alerts"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp" />

        <TextView
            android:id="@+id/tv_events_hosted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/events_hosted"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp" />

        <TextView
            android:id="@+id/tv_customize_based"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customize_based"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_alerts_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_15dp"
        android:layout_marginStart="@dimen/_15dp"
        android:background="@drawable/edit_text_bg_rectangle"
        android:gravity="center"
        android:padding="@dimen/_10dp"
        android:text="@string/next"
        android:textColor="#6DEE98"
        android:textSize="@dimen/_18sp" />


</LinearLayout>
