<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xappie.activities.EditProfileActivity">

<include layout="@layout/action_bar_edit_profile"
    android:id="@+id/action_bar_edit_profile"/>

<LinearLayout
    android:layout_width="match_parent"
    android:id="@+id/linear_edit_profile"
    android:layout_below="@+id/action_bar_edit_profile"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_edit_profile_full_name"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginStart="@dimen/_20dp"
        android:text="@string/full_name"
        android:textSize="@dimen/_18sp"/>
  <EditText
      android:layout_width="@dimen/_320dp"
      android:id="@+id/edit_text_full_name"
      android:background="@drawable/edit_text_bg_rectangle"
      android:layout_marginStart="@dimen/_18dp"
      android:hint="@string/ravi_kiran"
      android:textSize="@dimen/_18sp"
      android:cursorVisible="false"
      android:inputType="text"
       android:paddingLeft="@dimen/_20dp"
      android:layout_marginTop="@dimen/_10dp"
      android:layout_height="@dimen/_45dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_edit_profile_display_name"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginStart="@dimen/_20dp"
        android:text="@string/display_name"
        android:textSize="@dimen/_18sp"/>
    <EditText
        android:layout_width="@dimen/_320dp"
        android:id="@+id/edit_text_display_name"
        android:background="@drawable/edit_text_bg_rectangle"
        android:layout_marginStart="@dimen/_18dp"
        android:hint="@string/ravi_k"
        android:inputType="text"
        android:textSize="@dimen/_18sp"
        android:cursorVisible="false"
        android:paddingLeft="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_height="@dimen/_45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_edit_profile_email"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginStart="@dimen/_20dp"
        android:text="@string/email"
        android:textSize="@dimen/_18sp"/>
    <EditText
        android:layout_width="@dimen/_320dp"
        android:id="@+id/edit_text_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_bg_rectangle"
        android:layout_marginStart="@dimen/_18dp"
        android:hint="@string/ravi_email"
        android:textSize="@dimen/_18sp"
        android:cursorVisible="false"
        android:paddingLeft="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_height="@dimen/_45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_edit_profile_mobile"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginStart="@dimen/_20dp"
        android:text="@string/moble"
        android:textSize="@dimen/_18sp"/>
    <EditText
        android:layout_width="@dimen/_320dp"
        android:id="@+id/edit_text_mobile"
        android:inputType="number"
        android:background="@drawable/edit_text_bg_rectangle"
        android:layout_marginStart="@dimen/_18dp"
        android:hint="@string/ravi_mobile_no"
        android:textSize="@dimen/_18sp"
        android:cursorVisible="false"
        android:paddingLeft="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_height="@dimen/_45dp" />

    <Button
        android:layout_width="@dimen/_320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/red_rectangular_bg"
        android:layout_marginEnd="@dimen/_20dp"
        android:text="@string/update"
        android:textColor="@color/white"
        android:id="@+id/b_update"
        android:textAllCaps="false"
        android:textSize="@dimen/_21sp"
        android:layout_marginStart="@dimen/_18dp" />

</LinearLayout>


</RelativeLayout>
