<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/action_bar_edit_profile"
        android:id="@+id/tool_bar_edit_profile"/>


    <LinearLayout
        android:id="@+id/linear_edit_profile"
        android:layout_width="match_parent"
        android:layout_below="@+id/tool_bar_edit_profile"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_edit_profile_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/full_name"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/edit_text_full_name"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_45dp"
            android:layout_marginStart="@dimen/_18dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/edit_text_bg_rectangle"
            android:cursorVisible="false"
            android:hint="@string/ravi_kiran"
            android:inputType="text"
            android:paddingLeft="@dimen/_20dp"
            android:textSize="@dimen/_15sp" />


        <TextView
            android:id="@+id/tv_edit_profile_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/display_name"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/edit_text_display_name"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_45dp"
            android:layout_marginStart="@dimen/_18dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/edit_text_bg_rectangle"
            android:cursorVisible="false"
            android:hint="@string/ravi_k"
            android:inputType="text"
            android:paddingLeft="@dimen/_20dp"
            android:textSize="@dimen/_15sp" />

        <TextView
            android:id="@+id/tv_edit_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/email"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_45dp"
            android:layout_marginStart="@dimen/_18dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/edit_text_bg_rectangle"
            android:cursorVisible="false"
            android:hint="@string/ravi_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_20dp"
            android:textSize="@dimen/_15sp" />

        <TextView
            android:id="@+id/tv_edit_profile_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/moble"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/edit_text_mobile"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_45dp"
            android:layout_marginStart="@dimen/_18dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/edit_text_bg_rectangle"
            android:cursorVisible="false"
            android:hint="@string/ravi_mobile_no"
            android:inputType="number"
            android:paddingLeft="@dimen/_20dp"
            android:textSize="@dimen/_15sp" />

        <Button
            android:id="@+id/b_update"
            android:layout_width="@dimen/_320dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginStart="@dimen/_18dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/red_rectangular_bg"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

    </LinearLayout>


</RelativeLayout>
